<resources>
    <string name="app_name">Interactive CYOA editor</string>
    <string name="items_list_editor_title">Title</string>
    <string name="items_list_editor_add">Add</string>
    <string name="generic_list_item_overtext">overtext</string>
    <string name="generic_list_item_title">Title</string>
    <string name="generic_list_item_subtext">subtext</string>
    <string name="name_field_hint">Name</string>
    <string name="description_field_hint">Description</string>
    <string name="version_field_hint">Version</string>
    <string name="version_code_field_hint">Version code</string>
    <string name="author_field_hint">Author</string>
    <string name="points_list_view_title">Points</string>
    <string name="adventure_nodes_list_view_title">Adventure nodes</string>
    <string name="binder_id_label">ID: %1$s</string>
    <string name="initial_amount_field_hint">Initial amount</string>
    <string name="adventure_form_fragment_title">Adventure editor</string>
    <string name="point_state_form_fragment_title">Points editor</string>
    <string name="point_type_can_go_under_zero_label">Can go under zero</string>
    <string name="item_is_hidden_label">Is hidden</string>
    <string name="item_show_requirements_list_field_label">Show if</string>
    <string name="unnamed_points">Unnamed Points</string>
    <string name="unnamed_adventure_node">Unnamed Node</string>
    <string name="has_choices_field_label">Has choices</string>
    <string name="choices_select_limit_label">Choice select limit</string>
    <string name="title_field_label">Title</string>
    <string name="paragraph_field_label">Paragraph</string>
    <string name="choice_type_field_label">Choice type</string>
    <string name="node_specific_points_list_title_label">Node points</string>
    <string name="adventure_node_form_fragment_title">Adventure node editor</string>
    <string name="choice_type_optional">Optional</string>
    <string name="choice_type_required">Required</string>
    <string name="requirement_type_choice_selection">Choice Selection</string>
    <string name="requirement_type_point_amount">Point Amount</string>
    <string name="requirement_type_point_comparison">Point Comparison</string>
    <string name="choices_list_editor_title_label">Choices</string>
    <string name="choice_form_fragment_title">Choice editor</string>
    <string name="automatically_activated_field_label">Automatically activated?</string>
    <string name="choice_buy_limit_label">Times can select</string>
    <string name="costs_list_title_label">Costs</string>
    <string name="requirements_list_title_label">Requirements</string>
    <string name="sub_nodes_list_title_label">Sub-nodes</string>
    <string name="empty_list_placeholder">Empty</string>
    <string name="unnamed_choice">Unnamed choice</string>
    <string name="undefined_cost">Undefined cost</string>
    <string name="cost_list_title">%1$s %2$s</string>
    <string name="cost_modifiers_list_title_lable">Modifiers</string>
    <string name="point_type_field_label">Points type</string>
    <string name="cost_amount_field_hint">Cost amount</string>
    <string name="adventures_list_title_label">Adventures</string>
    <string name="activatable_field_label">Activable?</string>
    <string name="conditions_list_title_label">Conditions</string>
    <string name="cost_form_fragment_title">Cost editor</string>
    <string name="cost_modifier_form_fragment_title">Cost modifier editor</string>
    <string name="cost_mod_amount_field">Cost modifier amount</string>
    <string name="point_amount_requirement_description">%1$s %2$s %3$s</string>
    <string name="choice_requirement_description">%1$s (%2$s)</string>
    <string name="undefined_requirement">Undefined</string>
    <string name="requirement_choice_dialog_title">Requirement type</string>
    <string name="multi_buy_field_label">Can be selected multiple times</string>
    <string name="grouping_type_field_label">Grouping type</string>
    <string name="choice_selection_requirement_form_fragment_title">Requirement editor</string>
    <string name="choice_requirement_list_title_label">Choices</string>
    <string name="choice_selection_requirement_dialog_title">Select choice</string>
    <string name="multiple_choices_dialog_positive_button">Apply</string>
    <string name="multiple_choices_dialog_negative_button">Discard</string>
    <string name="grouping_type_all_selected">All selected</string>
    <string name="grouping_type_at_least_one_selected">At least one selected</string>
    <string name="grouping_type_not_even_one_selected">Not even one selected</string>
    <string name="grouping_type_all_not_selected">All not selected</string>
    <string name="point_amount_requirement_form_fragment_title">Requirement editor</string>
    <string name="comparison_function_field_label">Comparison function</string>
    <string name="more_than"><![CDATA[More than (>)]]></string>
    <string name="more_than_equal"><![CDATA[More than or equal (≥)]]></string>
    <string name="equal"><![CDATA[Equal to (=)]]></string>
    <string name="less_than"><![CDATA[Less than (<)]]></string>
    <string name="less_than_equal"><![CDATA[Less than or equal (≤)]]></string>
    <string name="point_type_b_field_label">Points type A</string>
    <string name="point_type_a_field_label">Points type B</string>
    <string name="searchbar_hint">Search…</string>
    <string name="chooser_dialog_cancel">Cancel</string>
    <string name="cost_modifier_type_additive">Additive</string>
    <string name="cost_modifier_type_multiplicative">Multiplicative</string>
    <string name="menu_save_action">Save</string>
    <string name="playthroughs_list_title_label">Playthroughs</string>
</resources>